feat: add login and auth middleware | refactor errors and tests
