# internal/adapters/http/server.go
@@ -6,6 +6,7 @@ import (
 	httpSwagger "github.com/swaggo/http-swagger"
 	"go-starter/config"
 	_ "go-starter/docs"
+	"go-starter/internal/domain/ports"
 	"log/slog"
 	"net/http"
 	"time"
@@ -17,11 +18,12 @@ type Server struct {
 }
 
 // New creates a new HTTP server
-func New(config *config.HTTP, healthHandler HealthHandler, userHandler UserHandler) *Server {
+func New(config *config.HTTP, healthHandler HealthHandler, authHandler AuthHandler, userHandler UserHandler, authService ports.AuthService) *Server {
 	mux := http.NewServeMux()
 	mux.HandleFunc("GET /v1/swagger/", httpSwagger.WrapHandler)
 	mux.HandleFunc("GET /v1/health", healthHandler.Health)
-	mux.HandleFunc("GET /v1/users/{id}", userHandler.GetByID)
+	mux.HandleFunc("POST /v1/auth/login", authHandler.Login)
+	mux.Handle("GET /v1/users/{uuid}", authMiddleware(&authService, http.HandlerFunc(userHandler.GetByID)))
 	mux.HandleFunc("POST /v1/users", userHandler.Register)
 
 	handler := loggingMiddleware(corsMiddleware(mux))
