# internal/adapters/http/user.go
@@ -28,23 +28,38 @@ func NewUserHandler(svc ports.UserService) *UserHandler {
 //	@Tags			Users
 //	@Accept			json
 //	@Produce		json
-//	@Param			id	path		int		true	"User ID"
+//	@Param			uuid	path		string		true	"User ID" format(uuid)
 //	@Success		200	{object}	userResponse	"User displayed"
 //	@Failure		400	{object}	errorResponse	"Incorrect User ID"
+//	@Failure		401	{object}	errorResponse	"Unauthorized error"
+//	@Failure		403	{object}	errorResponse	"Forbidden error"
 //	@Failure		404	{object}	errorResponse	"Data not found error"
 //	@Failure		500	{object}	errorResponse	"Internal server error"
-//	@Router			/v1/users/{id} [get]
+//	@Router			/v1/users/{uuid} [get]
+//	@Security		BearerAuth
 func (uh *UserHandler) GetByID(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	id := r.PathValue("id")
-	userID, err := uuid.Parse(id)
+	id := r.PathValue("uuid")
 
+	userUUID, err := uuid.Parse(id)
 	if err != nil {
 		handleError(w, domain.ErrInvalidUserId)
 		return
 	}
 
-	user, err := uh.svc.GetByID(ctx, entities.UserID(userID))
+	authPayload, err := getAuthPayload(ctx, authorizationPayloadKey)
+	if err != nil {
+		handleError(w, domain.ErrInternal)
+		return
+	}
+
+	userID := entities.UserID(userUUID)
+	if authPayload.UserID != userID {
+		handleError(w, domain.ErrForbidden)
+		return
+	}
+
+	user, err := uh.svc.GetByID(ctx, userID)
 	if err != nil {
 		handleError(w, err)
 		return
@@ -54,10 +69,10 @@ func (uh *UserHandler) GetByID(w http.ResponseWriter, r *http.Request) {
 	handleSuccess(w, http.StatusOK, response)
 }
 
-// registerUserRequest represents the request body for creating a user
-type registerUserRequest struct {
+// RegisterUserRequest represents the request body for creating a user
+type RegisterUserRequest struct {
 	Username string `json:"username" validate:"required" example:"john"`
-	Password string `json:"password" validate:"required" example:"secret"`
+	Password string `json:"password" validate:"required" example:"secret123"`
 }
 
 // Register godoc
@@ -67,7 +82,7 @@ type registerUserRequest struct {
 //	@Tags			Users
 //	@Accept			json
 //	@Produce		json
-//	@Param			registerUserRequest	body registerUserRequest true "Register request"
+//	@Param			RegisterUserRequest	body RegisterUserRequest true "Register request"
 //	@Success		200	{object}	userResponse	"User created"
 //	@Failure		409	{object}	errorResponse	"Duplication error"
 //	@Failure		422	{object}	errorResponse	"Validation error"
@@ -75,7 +90,7 @@ type registerUserRequest struct {
 //	@Router			/v1/users [post]
 func (uh *UserHandler) Register(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	var payload registerUserRequest
+	var payload RegisterUserRequest
 
 	if err := validator.ValidateRequest(w, r, &payload); err != nil {
 		handleValidationError(w, err)
@@ -84,6 +99,7 @@ func (uh *UserHandler) Register(w http.ResponseWriter, r *http.Request) {
 
 	user := entities.User{
 		Username: payload.Username,
+		Password: payload.Password,
 	}
 
 	created, err := uh.svc.Register(ctx, &user)
